# mcpp

./: .gitignore  CMakeLists.txt  CMakePresets.json
core/: CMakeLists.txt
core/func/: func.cppm  function.cppm
core/refl/: refl.cppm
examples/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/core/func/: function.cpp
tests/core/refl/: refl.cpp
